tests/baselines/reference/unusedTypeParameters5.errors.txt
tests/cases/compiler/unusedTypeParameters5.ts(6,16): error TS6133: 'K' is declared but never used.


==== tests/cases/compiler/unusedTypeParameters5.ts (1 errors) ====
    class A<Dummy> {
        public x: Dummy;
    }
    
    var x: {
        new <T, U, K>(a: T): A<U>;
                   ~
!!! error TS6133: 'K' is declared but never used.
    }